# NetMarket

./: CMakeLists.txt
.github/workflows/: ci.yml
data/: products.txt  users.txt
include/: user.h
src/: main.cpp  user.cpp
